# config-dirs-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
