[package]
name = "config-dirs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Load a config file by trying out default config file locations"
repository = "https://github.com/nitn3lav/config-dirs-rs"
keywords = ["config"]

[dependencies]
dirs = "5.0.1"
thiserror = "1.0.61"
tracing = "0.1.40"

[dev-dependencies]
serde = { version = "1.0.203", features = ["serde_derive"] }
toml = "0.8.14"
